/*
 * Copyright Â© 2022 Durudex

 * This file is part of Durudex: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.

 * Durudex is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Affero General Public License for more details.

 * You should have received a copy of the GNU Affero General Public License
 * along with Durudex. If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/durudex/durudex-post-service/internal/delivery/grpc/pb;pb";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc GetPostByID(GetPostByIDRequest) returns (GetPostByIDResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

message CreatePostRequest {
  string text = 1;
}

message CreatePostResponse {
  bytes id = 1;
}

message GetPostByIDRequest {
  bytes id = 1;
}

message GetPostByIDResponse {
  bytes author_id = 1;
  string text = 2;
  google.protobuf.Timestamp created_at = 3;
  optional google.protobuf.Timestamp updated_at = 4;
}

message DeletePostRequest {
  bytes id = 1;
}

message DeletePostResponse {}
